--- a/index.html
+++ b/index.html
@@ -5,8 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>itrao</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;1,200;1,300;1,400;1,600&display=swap" rel="stylesheet"> 
+
+<link rel="stylesheet" href="./css/main.css">
+<script src="https://kit.fontawesome.com/0b971f3444.js" crossorigin="anonymous"></script>
+
 </head>
+
 <body>
-    
+  <!-- button nie działa nie wiem dlaczego -->
+  <button class="button">
+    <div class="button__box">
+        <div class="button__bars"></div>
+    </div>
+  </button>
+  
+<nav class="nav">
+    <div class="nav__items">
+        <a href="#apps" class="nav__item">Aplikacje</a>
+        <a href="#help" class="nav__item">Pomoc</a>
+        <a href="#contact" class="nav__item">Kontakt</a>
+
+    </div>
+
+    <div class="nav__line">
+        <div class="nav__lchoice">Aplikacje</div>
+        <div class="nav__lchoice">Pomoc</div>
+        <div class="nav__lchoice">Kontakt</div>
+    </div>
+</nav>
+
+
+
 </body>
 </html>
