--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;1,200;1,300;1,400;1,600&display=swap"
         rel="stylesheet">
-
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="./css/main.css">
     <script src="https://kit.fontawesome.com/0b971f3444.js" crossorigin="anonymous"></script>
 
@@ -56,7 +56,7 @@
 
             <div class="welcome__box">
                 <div class="welcome__text">
-                    <p class="welcome__text--item1"><span>w</span>itajcie</p>
+                    <p class="welcome__text--item1"><span>w</span>itajcie !</p>
                     <p class="welcome__text--item2"> Serdecznie witam na stronie itrao.
                         Strona ta poświęcona jest aplikacjom, które można zakupić w Apple Store. Znajdziecie tu
                         informacje na temat aplikacji, najnowsze informacje dotyczące uaktualnień oraz "promo kody".
@@ -66,27 +66,62 @@
                         w aplikacjach - koniecznie wyślijcie maila (MENU -> Kontakt).
 
                         Mam nadzieję, że używanie aplikacji będzie dla Was przyjemnością</p>
-                        <p class="welcome__text--item3">Paweł Pabisiak</p>
-                </div>
-                <div class="welcome__news">
-                    <div class="about-me__news-item">
-
-                    </div>
-
+                    <p class="welcome__text--item3">Paweł Pabisiak</p>
                 </div>
             </div>
 
         </section>
 
-        <section class="apps">
-            <div class="apps__box">
+        <section class="news">
+            <h2> <span>"A</span>plikacje i wiadomości"</h2>
+            <div class="underline"></div>
+            <div class="news__box news__carousel">
+                <div class="news__cards news__cards--one ">
+                    <img class="news__cards--img" src="./img/AMB_120.png" alt="ikona aplikacji ambasady">
+                    <p class="news__cards--name-one">amb - ambasady</p>
+        
+                </div>
+                <div class="news__cards news__cards--two">
+                    <img class="news__cards--img" src="./img/bryly320.png" alt="ikona aplikacji bryły">
+                    <p class="news__cards--name-one">bryły</p>
+                </div>
+                <div class="news__cards news__cards--three">
+                    <img class="news__cards--img" src="./img/saferoad320.png" alt="ikona aplikacji bryły">
+                    <p class="news__cards--name-one">safe road</p>
+                </div>
+                <div class="news__cards news__cards--four">
+                    <img class="news__cards--img" src="./img/ambus320.png" alt="ikona aplikacji bryły">
+                    <p class="news__cards--name-one">AMBUS - us embassies</p>
+                </div>
+                <div class="news__cards news__cards--five">
+                    <img class="news__cards--img" src="./img/stadiony320.png" alt="ikona aplikacji bryły">
+                    <p class="news__cards--name-one">stadiony</p>
+                </div>
+                <div class="news__cards news__cards--six">
+                    <img class="news__cards--img" src="./img/AMB320.png" alt="ikona aplikacji ambasady">
+                    <p class="news__cards--name-one">amb 3.0 - ambasady</p>
+                </div>
+                <div class="news__cards news__cards--seven">
+                    <img class="news__cards--img" src="./img/promokody.jpg" alt="ikona aplikacji ambasady">
+                    <p class="news__cards--name-one">promokody</p>
+                </div>
 
-            </div>
+
+
+
         </section>
-
     </main>
 
+    <footer class="footer">
+        <p>&copy;2022 | Paweł Pabisiak</p>
+    </footer>
 
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="./js/slick_settings.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
