nav menu changed, responsiveness done, apple animation added, nav-mobile added, nav-mobile menu - turnning off added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <!-- button nie działa nie wiem dlaczego -->
-    <button class="button burger-btn mobile-button">
+    <button class="burger-btn mobile-button">
         <div class="burger-btn__box">
             <div class="burger-btn__bars"></div>
         </div>
@@ -38,6 +38,18 @@
 
     </nav>
 
+    <nav class="nav-mobile">
+        <div class="nav__items nav-mobile__items">
+            <a href="" class="nav__item nav-mobile__item"><span>h</span>ome</a>
+            <a href="" class="nav__item nav-mobile__item"><span>a</span>plikacje</a>
+            <a href="" class="nav__item nav-mobile__item"><span>k</span>ontakt</a>
+            <a href="" class="nav__item nav-mobile__item"><span>p</span>omoc</a>
+        </div>
+    </nav>
+
+
+
+
     <header class="header">
         <div class="header__hero-img">
             <p><i class="fa-brands fa-apple"></i></p>
@@ -52,7 +64,7 @@
 
 
     <main>
-        <section class="welcome">
+        <section id="home" class="welcome">
 
             <div class="welcome__box">
                 <div class="welcome__text">
