wrapper added, the first card of apps page added

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         </div>
     </button>
 
-    <nav class="nav">
+    <nav class="nav wrapper">
         <div class="nav__items">
-            <a href="" class="nav__item"><span>h</span>ome</a>
-            <a href="" class="nav__item"><span>a</span>plikacje</a>
+            <a href="#" class="nav__item"><span>h</span>ome</a>
+            <a href="./apps.html" class="nav__item"><span>a</span>plikacje</a>
             <a href="" class="nav__item"><span>k</span>ontakt</a>
             <a href="" class="nav__item"><span>p</span>omoc</a>
         </div>
@@ -40,8 +40,8 @@
 
     <nav class="nav-mobile">
         <div class="nav__items nav-mobile__items">
-            <a href="" class="nav__item nav-mobile__item"><span>h</span>ome</a>
-            <a href="" class="nav__item nav-mobile__item"><span>a</span>plikacje</a>
+            <a href="#" class="nav__item nav-mobile__item"><span>h</span>ome</a>
+            <a href="./apps.html" class="nav__item nav-mobile__item"><span>a</span>plikacje</a>
             <a href="" class="nav__item nav-mobile__item"><span>k</span>ontakt</a>
             <a href="" class="nav__item nav-mobile__item"><span>p</span>omoc</a>
         </div>
@@ -50,7 +50,7 @@
 
 
 
-    <header class="header">
+    <header class="header wrapper">
         <div class="header__hero-img">
             <p><i class="fa-brands fa-apple"></i></p>
             <h1 class="header__hero-title"><span>www.</span>itrao<span>.eu</span></h1>
@@ -64,7 +64,7 @@
 
 
     <main>
-        <section id="home" class="welcome">
+        <section id="home" class="welcome wrapper">
 
             <div class="welcome__box">
                 <div class="welcome__text">
@@ -84,7 +84,7 @@
 
         </section>
 
-        <section class="news">
+        <section class="news wrapper">
             <h2> <span>"A</span>plikacje i wiadomości"</h2>
             <div class="underline"></div>
             <div class="news__box news__carousel">
