apps page schema prepared

--- a/apps.html
+++ b/apps.html
@@ -65,19 +65,114 @@
 
     <main>
         <section id="home" class="apps">
-<h1>Aplikacje</h1>
-            <div class="apps__card">
-                <div class="apps__card--img">
+            <h1>Aplikacje</h1>
+            <div class="apps__cards wrapper">
+                <div class="apps__card apps__card-one">
+
+                    <div class="apps__cards--page-one">
+                        <div class="apps__cards--img">
+
+                        </div>
+                        <div class="apps__cards--title ">
+                            <h2>amb - ambasady</h2>
+                        </div>
+                    </div>
+
+                    <div class="apps__cards--page-two">
+                        <div class="apps__cards-text">
+                            <p>amb - ambasady</p>
+                            <p>bardzo fajna aplikacja ambasadach w Europie</p>
+                        </div>
+
+                    </div>
 
                 </div>
-                <div class="apps__card--text apps__card-text--one">
-                    <h2>amb - ambasady</h2>
-                </div>
-            </div>
+                
+                <div class="apps__card apps__card-two">
 
+                    <div class="apps__cards--page-one">
+                        <div class="apps__cards--img">
+
+                        </div>
+                        <div class="apps__cards--title ">
+                            <h2>amb - ambasady</h2>
+                        </div>
+                    </div>
+
+                    <div class="apps__cards--page-two">
+                        <div class="apps__cards-text">
+                            <p>amb - ambasady</p>
+                            <p>bardzo fajna aplikacja ambasadach w Europie app nr2</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="apps__card apps__card-three">
+
+                    <div class="apps__cards--page-one">
+                        <div class="apps__cards--img">
+
+                        </div>
+                        <div class="apps__cards--title ">
+                            <h2>amb - ambasady</h2>
+                        </div>
+                    </div>
+
+                    <div class="apps__cards--page-two">
+                        <div class="apps__cards-text">
+                            <p>amb - ambasady</p>
+                            <p>bardzo fajna aplikacja nr 3</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="apps__card apps__card-four">
+
+                    <div class="apps__cards--page-one">
+                        <div class="apps__cards--img">
+
+                        </div>
+                        <div class="apps__cards--title ">
+                            <h2>amb - ambasady</h2>
+                        </div>
+                    </div>
+
+                    <div class="apps__cards--page-two">
+                        <div class="apps__cards-text">
+                            <p>amb - ambasady</p>
+                            <p>bardzo fajna aplikacja nr 4</p>
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="apps__card apps__card-five">
+
+                    <div class="apps__cards--page-one">
+                        <div class="apps__cards--img">
+
+                        </div>
+                        <div class="apps__cards--title ">
+                            <h2>amb - ambasady</h2>
+                        </div>
+                    </div>
+
+                    <div class="apps__cards--page-two">
+                        <div class="apps__cards-text">
+                            <p>amb - ambasady</p>
+                            <p>bardzo fajna aplikacja nr 5</p>
+                        </div>
+
+                    </div>
+
+                </div>
         </section>
 
-        
+
     </main>
 
     <footer class="footer">
