the apps page modified - second page of card prepared

--- a/apps.html
+++ b/apps.html
@@ -65,44 +65,69 @@
 
     <main>
         <section id="home" class="apps">
-            <h1>Aplikacje</h1>
+            <h1><span class="big-letters">a</span>plikacje</h1>
             <div class="apps__cards wrapper">
+
                 <div class="apps__card apps__card-one">
 
-                    <div class="apps__cards--page-one">
-                        <div class="apps__cards--img">
+                    <div class="apps__cards-page-one">
+                        <div class="apps__cards-img">
 
                         </div>
-                        <div class="apps__cards--title ">
-                            <h2>amb - ambasady</h2>
+                        <div class="apps__cards-title">
+                            <h2><span class="big-letters">amb</span> - ambasady</h2>
                         </div>
                     </div>
 
-                    <div class="apps__cards--page-two">
+                    <div class="apps__cards-page-two">
                         <div class="apps__cards-text">
-                            <p>amb - ambasady</p>
-                            <p>bardzo fajna aplikacja ambasadach w Europie</p>
+                            <p><span class="big-letters">amb</span> - ambasady</p>
+                            <p>Category: Travel</p>
+                            <p>Updated: 23 March 2014</p>
+                            <p>Version: 3.0</p>
+                            <p>Size: 30.7 MB</p>
+                            <p>Language: English</p>
+                            <p>Developer: Paweł Pabisiak</p>
+                            <p>&copy; Paweł Pabisiak</p>
+                            <p>Rated 4+</p>
+                            <p>Compatibility: Requires iOS 6.0 or later. Compatible with iPhone, iPad, and iPd touch.
+                                This app is optimized for iPhone 5</p>
+
+
                         </div>
 
                     </div>
 
                 </div>
-                
+
+
+
                 <div class="apps__card apps__card-two">
 
-                    <div class="apps__cards--page-one">
-                        <div class="apps__cards--img">
-
+                    <div class="apps__cards-page-one">
+                        <div class="apps__cards-img">
                         </div>
-                        <div class="apps__cards--title ">
-                            <h2>amb - ambasady</h2>
+                        <div class="apps__cards-title">
+                            <h2><span class="big-letters">ambus</span> embassies</h2>
                         </div>
                     </div>
 
-                    <div class="apps__cards--page-two">
+                    <div class="apps__cards-page-two">
                         <div class="apps__cards-text">
-                            <p>amb - ambasady</p>
-                            <p>bardzo fajna aplikacja ambasadach w Europie app nr2</p>
+                            <p><span class="big-letters">ambus</span> - ambasady</p>
+                            <hr>
+
+                            <ul>
+                                <li>
+                                    <span class="underline-letters"><span class="big-letters">c</span>ategory:</span>
+                                    Travel</li>
+                                <li><span class="underline-letters"><span class="big-letters">r</span>eleased:</span> 14 August 2012</li>
+                                <li><span class="underline-letters"><span class="big-letters">v</span>ersion:</span> 1.0</li>
+                                <li><span class="underline-letters"><span class="big-letters">s</span>ize:</span> 64.2 MB</li>
+                                <li><span class="underline-letters"><span class="big-letters">l</span>anguage:</span> English</li>
+                                <li><span class="underline-letters"><span class="big-letters">d</span>eveloper:</span> Paweł Pabisiak</li>
+                                <li></li>
+                                <li><span class="underline-letters"><span class="big-letters">r</span>ated:</span> 4+</li>
                         </div>
 
                     </div>
@@ -111,16 +136,16 @@
 
                 <div class="apps__card apps__card-three">
 
-                    <div class="apps__cards--page-one">
-                        <div class="apps__cards--img">
+                    <div class="apps__cards-page-one">
+                        <div class="apps__cards-img">
 
                         </div>
-                        <div class="apps__cards--title ">
+                        <div class="apps__cards-title">
                             <h2>amb - ambasady</h2>
                         </div>
                     </div>
 
-                    <div class="apps__cards--page-two">
+                    <div class="apps__cards-page-two">
                         <div class="apps__cards-text">
                             <p>amb - ambasady</p>
                             <p>bardzo fajna aplikacja nr 3</p>
@@ -132,16 +157,16 @@
 
                 <div class="apps__card apps__card-four">
 
-                    <div class="apps__cards--page-one">
-                        <div class="apps__cards--img">
+                    <div class="apps__cards-page-one">
+                        <div class="apps__cards-img">
 
                         </div>
-                        <div class="apps__cards--title ">
+                        <div class="apps__cards-title">
                             <h2>amb - ambasady</h2>
                         </div>
                     </div>
 
-                    <div class="apps__cards--page-two">
+                    <div class="apps__cards-page-two">
                         <div class="apps__cards-text">
                             <p>amb - ambasady</p>
                             <p>bardzo fajna aplikacja nr 4</p>
@@ -152,16 +177,16 @@
                 </div>
                 <div class="apps__card apps__card-five">
 
-                    <div class="apps__cards--page-one">
-                        <div class="apps__cards--img">
+                    <div class="apps__cards-page-one">
+                        <div class="apps__cards-img">
 
                         </div>
-                        <div class="apps__cards--title ">
+                        <div class="apps__cards-title">
                             <h2>amb - ambasady</h2>
                         </div>
                     </div>
 
-                    <div class="apps__cards--page-two">
+                    <div class="apps__cards-page-two">
                         <div class="apps__cards-text">
                             <p>amb - ambasady</p>
                             <p>bardzo fajna aplikacja nr 5</p>
