added class for icon in apps (apps.html), two first section filled

--- a/apps.html
+++ b/apps.html
@@ -72,35 +72,35 @@
 
                     <div class="apps__description-left">
                         <div class="apps__page-one">
-                            <div class="apps__page-one-img"></div>
+                            <div class="apps__page-one-img apps__page-one-img--app-one"></div>
                             <div class="apps__title">
                                 <p>AMB-ambasady</p>
                             </div>
                         </div>
                         <div class="apps__page-two">
-                            <p class="apps__title"><span class="big-letters">ambus</span> - ambasady</p>
+                            <p class="apps__title"><span class="big-letters">amb</span> - ambasady</p>
                             <hr>
 
                             <ul class="apps__specification-table">
                                 <li>
-                                    <span class="underline-letters"><span class="big-letters">c</span>ategory:</span>
+                                    <span class="big-letters">c</span>ategory:</span>
                                     Travel
                                 </li>
-                                <li><span class="underline-letters"><span class="big-letters">u</span>pdated:</span>
+                                <li><span class="big-letters">u</span>pdated:</span>
                                     23
                                     March 2014</li>
-                                <li><span class="underline-letters"><span class="big-letters">v</span>ersion:</span>
+                                <li><span class="big-letters">v</span>ersion:</span>
                                     3.0
                                 </li>
-                                <li><span class="underline-letters"><span class="big-letters">s</span>ize:</span>
+                                <li><span class="big-letters">s</span>ize:</span>
                                     30.7
                                     MB</li>
-                                <li><span class="underline-letters"><span class="big-letters">l</span>anguage:</span>
+                                <li><span class="big-letters">l</span>anguage:</span>
                                     English</li>
-                                <li><span class="underline-letters"><span class="big-letters">d</span>eveloper:</span>
+                                <li><span class="big-letters">d</span>eveloper:</span>
                                     Paweł Pabisiak</li>
                                 <li></li>
-                                <li><span class="underline-letters"><span class="big-letters">r</span>ated:</span>
+                                <li><span class="big-letters">r</span>ated:</span>
                                     4+
                                 </li>
                         </div>
@@ -108,17 +108,84 @@
                     </div>
 
                     <div class="apps__description-right">
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eos in dolores nisi quisquam
-                            doloribus odio, nemo earum doloremque expedita, quae dolorum iste iure perferendis animi
-                            delectus culpa ea eius velit sapiente! Totam, qui sequi fugiat ullam ipsam eum culpa ducimus
-                            cupiditate iusto blanditiis repudiandae dolore fuga neque soluta enim vitae architecto
-                            inventore est laborum libero. Maxime nostrum inventore itaque?
+                        <p><span class="bold-letters">AMB ambasady</span>  - jest aplikacją, która zapewnia dostęp do informacji o polskich placówkach
+                            dyplomatycznych w Europie (telefony, adresy, strony www, orientacyjne mapki położenia
+                            placówek).
                         </p>
+                        <p><span class="big-letters">bez konieczności łączenia sie z siecią </span>(internetem).</p>
+                        <p>Wszystkie informacje zostały zimplementowane w aplikacji, zapewniając ciągły dostęp do
+                            danych. Dzięki takiemu rozwiązaniu, na działanie aplikacji nie ma wpływu brak dostępu do
+                            sieci a kosztowny transfer danych w roamingu nie ma miejsca.</p>
+                        <p>Aktualność informacji na dzień: 15.02.2012 r.</p>
+                        <p>Źródło: www.msz.gov.pl</p>
+                        <p>Updated 15-th February 2012</p>
+                        <p>Source: Ministry of Foreign Affairs - www.msz.gov.pl</p>
+                        <p class="update-title-compatibility">
+                            <span class="underline-letters"><span
+                                class="big-letters">c</span>ompatibility:</span>
+                        Requires iOS 6.0 or later, Compatible with iPhone, iPad and iPod touch. This app
+                        is optimized for iPhone 5.
+                    
+                        </p>
+
+
+                        <p class="bold-letters update-title-compatibility"> AMB - ambasady v3.0</p>
+                        <p>Wersja 3.0 aplikacji zawiera aktualizację danych na miesiąc luty 21014 r. Poprawione został
+                            błędy. Interfejs dostosowany został do najnowszego iPhone .</p>
                     </div>
                 </div>
-                <div class="apps__panel apps__panel-two">
 
+                <div class="apps__panel apps__panel-two">
+                    <div class="apps__description-left">
+                        <div class="apps__page-one">
+                            <div class="apps__page-one-img apps__page-one-img--app-two"></div>
+                            <div class="apps__title">
+                                <p>AMB-ambasady</p>
+                            </div>
+                        </div>
+                        <div class="apps__page-two">
+                            <p class="apps__title"><span class="big-letters">ambus</span> - embassies</p>
+                            <hr>
+
+                            <ul class="apps__specification-table">
+                                <li>
+                                    <span class="big-letters">c</span>ategory:</span>
+                                    Travel
+                                </li>
+                                <li><span class="big-letters">u</span>pdated:</span>
+                                    14
+                                    August 2012</li>
+                                <li><span class="big-letters">v</span>ersion:</span>
+                                    1.0
+                                </li>
+                                <li><span class="big-letters">s</span>ize:</span>
+                                    64.2
+                                    MB</li>
+                                <li><span class="big-letters">l</span>anguage:</span>
+                                    English</li>
+                                <li><span class="big-letters">d</span>eveloper:</span>
+                                    Paweł Pabisiak</li>
+                                <li></li>
+                                <li><span class="big-letters">r</span>ated:</span>
+                                    4+
+                                </li>
+                        </div>
+                        
+                    </div>
+
+                    <div class="apps__description-right">
+                        <p><span class="bold-letters">AMBUS</span>  - embassies of the United States of America - is an useful and necessary app during
+                            travelling Europe. AMBUS contains several pieces of information about American embassies and
+                            consulates (phone numbers, addresses, e-mails, www, basic maps.</p>
+                        <p>All informations is implemented inside the app so you do not need to care about (mobile
+                            phone) signal in faraway places. Everything is in your phone.</p>
+                        <p>Updated 14-th July 2012</p>
+                        <p>Source: US Embassies - http://usembassies.gov.</p>
+                        <p><span class="underline-letters"><span class="big-letters">r</span>equirements:</span>
+                            Compatible with iPhone 3GS, iPhone 4, iPhone 4s, iPod touch (3rd generation),
+                            iPod touch(4th generation) and iPad Requires iOS 5.0 or later.
+                        </p>
+                    </div>
                 </div>
                 <div class="apps__panel apps__panel-three">
 
